--- a/Website/Info/index.html
+++ b/Website/Info/index.html
@@ -113,7 +113,65 @@
 						Level 10: 10,000XP<br>
 						<br>
 				<li>Please be aware that r!level is in a Beta stage(Some features may change or be reworked). The XP system was made with Enmap, https://www.npmjs.com/package/enmap enjoy!</li>
-				<li>For more information send me a DM or ask in #roast-bot-help.</li>
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-08-10:
+			<ul>
+				<li>Roast Bot v1.8.0 is live! The new features of this release are:</li>
+				<li>r!say comamnd is here. Use r!say What you want the bot to say to use it!</li>
+				<li>There are now 108 roasts in Roast-Bot! Before v1.8.0 there were 56.</li>
+				<li>There are now more Memes added to Roast-Bot. 100 to 123.</li>
+				<li>XP-System has been removed :(. Dont worry its coming back. Due to so many bugs and XP and levels resetting every update. It will be back within the week.</li>
+					
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-08-15:
+			<ul>
+				<li>Roast Bot v1.9.0 is here. Here's what's new:</li>
+				<li>r!urban whatToSearch is live! Search up anything on the urban dictionary with r!urban!</li>
+				<li>Each command will soon have a r!commandName help use where how to use the command will be shown.</li>
+				<li>New XP-System coming within the next couple weeks! Stay tuned.</li>
+				<li>Roast-Bot source code is now much easier to maintain.New XP-System coming within the next couple weeks! Stay tuned.</li>
+			</ul>
+			For more information on this release send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-09-19:
+			<ul>
+				<li>Roast Bot v2.0.0 is here!! The new features are:</li>
+				<li>welcome-leave-log was removed due to very few people using it.</li>
+				<li>New XP system added that increases XP and levels only when you use r! commands.</li>
+				<li>More than 50 new memes!</li>
+				<li>multiple bug fixes.</li>
+			</ul>
+		</p>
+		For more information on this release send me a DM or ask in #roast-bot-help.
+		<p>2018-09-29:
+			<ul>
+				<li>Roast-Bot v2.1.0 is live, the new features are as follows:</li>
+				<li>30 new Memes added.</li>
+				<li>r!user added! To learn more use r!user help.</li>
+				<li>And the best for last..... Roast-Bot now has custom prefix setting enabled! To learn more/get started use r!prefix help.</li>
+			</ul>
+			For more information on this release send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-10-13:
+			<ul>
+				<li>Roast-Bot v2.2.0 is now live, the new features/updates are as follows:</li>
+				<li>50 new Memes added!</li>
+				<li>r!feedback added, use r!feedback Feedback to send feedback. Note: you can also send reports of bugs with r!feedback.</li>
+				<li>On-Off is live! Use r!off commandName to turn commands off and r!on commamdName to turn a command back on. Note: only admins can turn commands on/off.</li>
+				<li>Custom prefix has been fixed, now the only way to change a prefix is by using r!prefix newPrefix no matter what your prefix is. Note: It has been changed so only admins can set the prefix.</li>
+				<li>For more information on v2.2.0 send me a DM or ask in #roast-bot-help.</li>
 			</ul>
 		</p>
 	</div>
