--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div id="mainText">
 
 		<b><h1>Roast-Bot:</h1></b>
-		<h3>Roasting, Memes and More.</h3>
+		<h3>Ever wanted to roast the living hell out of someone on discord? Well now its easier then ever with Roast-Bot.</h3>
 		<br>
 		<i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
 		<hr width="250px">
