--- a/Website/Leaderboard/index.html
+++ b/Website/Leaderboard/index.html
@@ -9,26 +9,26 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" media="screen" href="../../Website/Leaderboard/main.css" />
-	<script src="../../Website/Leaderboard/main.js"></script>
-	<link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG" />
+	<link rel="stylesheet" type="text/css" media="screen" href="../leaderboard/main.css" />
+	<script src="../leaderboard/main.js"></script>
+	<link rel="icon" type="image/png" href="../images/rbtop.PNG" />
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="index.html"><img src="../../Website/Images/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="index.html"><img src="../images/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
-				<a class="nav-item nav-link" href="../../Website/Commands/index.html">Commands</a>
-				<a class="nav-item nav-link" href="../../Website/Info/index.html">Info</a>
-				<a class="nav-item nav-link" href="../../Website/commandHelp/index.html">Command Help</a>
-				<a class="nav-item nav-link active" href="../../Website/Leaderboard/index.html">Leaderboards</a>
+				<a class="nav-item nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="../commands/index.html">Commands</a>
+				<a class="nav-item nav-link" href="../info/index.html">Info</a>
+				<a class="nav-item nav-link" href="../commandHelp/index.html">Command Help</a>
+				<a class="nav-item nav-link active" href="../leaderboard/index.html">Leaderboards</a>
 			</div>
 		</div>
 	</nav>
