help command fixed, top server command added, other fixes

--- a/website/Commands/index.html
+++ b/website/Commands/index.html
@@ -45,15 +45,15 @@
 	<hr width = "250px">
 	<br><br>
 	<ul>
-		<li><i>r!help</i>: List of Roast-Bot Commands.</li>
-		<li><i>r!bot</i>: Learn more about Roast-Bot.</li>
-		<li><i>r!roast @USER, r!roast, or r!roast #roastNumber</i>: Generate a random roast with the number of roast it was.</li>
-		<li><i>r!invite</i>: Link to invite Roast-Bot to a server.</li>
-		<li><i>r!server</i>: Info about your server.</li>
-		<li><i>r!meme, or r!meme #memeNumber</i>: Sends a meme to the current channel.</li>
-		<li><i>r!clear NUMBER</i>: Choose how many messages you want to delete. Max is 100. To use this command Roast-Bot needs to given Manage Messages permissions.</li>
-		<li><i>r!say whatToSay</i>: To use this command use r!say and then what you want Roast-Bot to say.</li>
-		<li><i>r!urban whatToSearch</i>: Search up anything on the Urban Dictionary! Please be aware r!urban is still in Beta. </li>
+		<li><i>rb!help</i>: List of Roast-Bot Commands.</li>
+		<li><i>rb!bot</i>: Learn more about Roast-Bot.</li>
+		<li><i>rb!roast @USER, rb!roast, or rb!roast #roastNumber</i>: Generate a random roast with the number of roast it was.</li>
+		<li><i>rb!invite</i>: Link to invite Roast-Bot to a server.</li>
+		<li><i>rb!server</i>: Info about your server.</li>
+		<li><i>rb!meme, or rb!meme #memeNumber</i>: Sends a meme to the current channel.</li>
+		<li><i>rb!clear NUMBER</i>: Choose how many messages you want to delete. Max is 100. To use this command Roast-Bot needs to given Manage Messages permissions.</li>
+		<li><i>rb!say whatToSay</i>: To use this command use rb!say and then what you want Roast-Bot to say.</li>
+		<li><i>rb!urban whatToSearch</i>: Search up anything on the Urban Dictionary! Please be aware rb!urban is still in Beta. </li>
 	</ul>
 	<br>
 	<br>
@@ -62,8 +62,8 @@
 	<hr width = "250px">
 	<br><br>
 	<ul>
-		<li><i>Custom Prefix</i>: If you don't like Roast-Bot's prefix(r!) you can change it to anything you want by using r!prefix <newPrefix>. To view your prefix use r!prefix. The prefix by default is r!.</li>
-		<li><i>XP-System</i>: Everytime you use a Roast-Bot command your XP increases! Use r!level to check your level and XP! Level 1: 0-9XP, Level 2: 10XP, Level 3: 15XP, Level 4: 25XP Level 5: 50XP, Level 6: 100XP, Level 7: 200XP, Level 8: 500XP, Level 9: 1,000XP, Level 10: 10,000XP.</li>
+		<li><i>Custom Prefix</i>: If you don't like Roast-Bot's prefix(rb!) you can change it to anything you want by using rb!prefix <newPrefix>. To view your prefix use rb!prefix. The prefix by default is rb!.</li>
+		<li><i>XP-System</i>: Everytime you use a Roast-Bot command your XP increases! Use rb!level to check your level and XP! Level 1: 0-9XP, Level 2: 10XP, Level 3: 15XP, Level 4: 25XP Level 5: 50XP, Level 6: 100XP, Level 7: 200XP, Level 8: 500XP, Level 9: 1,000XP, Level 10: 10,000XP.</li>
 	</ul>
 	<footer>
 		<div id = "footer">
