--- a/website/Info/index.html
+++ b/website/Info/index.html
@@ -66,9 +66,9 @@
 		<p>2018-07-30:
 			<ul>
 				<li>Roast-Bot v1.3.0 has been released. The new features of 1.3.0 are:</li>
-				<li>You can now roast a specific person with <code>r!roast @user</code></li>
-				<li>Custom Roast-Bot emoji in the server! :roast_square:</li>
-				<li>Lastly, <code>r!devServer</code> has been removed and has been integrated into <code>r!help</code></li>
+				<li>You can now roast a specific person with <code>rb!roast @user</code></li>
+				<li>Custom Roast-Bot emoji in the serverb! :roast_square:</li>
+				<li>Lastly, <code>rb!devServer</code> has been removed and has been integrated into <code>rb!help</code></li>
 			</ul>
 			For more information send me a DM or ask in #roast-bot-help.
 		</p>
@@ -77,7 +77,7 @@
 		<p>2018-08-01:
 			<ul>
 				<li>Roast-Bot v1.4.0 is now live! The new features of this update include the following:</li>
-				<li>Roast-Bot  memes are now here, use r!meme to try them out.</li>
+				<li>Roast-Bot  memes are now here, use rb!meme to try them out.</li>
 				<li>welcome-leave-log now includes the user displayAvatarURL of who left/joined!</li>		
 			</ul>
 			For more information send me a DM or ask in #roast-bot-help.
@@ -87,8 +87,8 @@
 		<p>2018-08-03:
 			<ul>
 				<li>Roast-Bot v1.6.0 is here. Here's what's new:</li>
-				<li>r!clear NUMBER. Clear messages easily and quickly, max # of messages allowed to be cleared is 100</li>
-				<li>Have a favorite r!meme or r!roast that you want to show a friend? Both commands now show what number of roast/meme it is, to show a friend it just use r!meme #1 or r!roast #1 to show the #1 roast!</li>
+				<li>rb!clear NUMBER. Clear messages easily and quickly, max # of messages allowed to be cleared is 100</li>
+				<li>Have a favorite rb!meme or rb!roast that you want to show a friend? Both commands now show what number of roast/meme it is, to show a friend it just use rb!meme #1 or rb!roast #1 to show the #1 roast!</li>
 				<li>Another Roast-Bot custom emoji!</li>
 				<li>Bug fixes and other multiple command looks updates</li>
 			</ul>
@@ -99,7 +99,7 @@
 		<p>2018-08-07:
 			<ul>
 				<li>Roast-Bot v1.7.0 is live! The new features of this release are:</li>
-				<li>r!level, Roast-Bot now has a XP-System, the XP-System only increases your XP when you use a Roast-Bot command! No need to worry about it interfering with other bots XP-Systems.  There are 10 levels. Every time you use a Roast-Bot command your XP increases by 1.  The XP required for each is documented below:</li>
+				<li>rb!level, Roast-Bot now has a XP-System, the XP-System only increases your XP when you use a Roast-Bot command! No need to worry about it interfering with other bots XP-Systems.  There are 10 levels. Every time you use a Roast-Bot command your XP increases by 1.  The XP required for each is documented below:</li>
 						<br>
 						Level 1: 0-9XP<br>
 						Level 2: 10XP<br>
@@ -112,7 +112,7 @@
 						Level 9: 1,000XP<br>
 						Level 10: 10,000XP<br>
 						<br>
-				<li>Please be aware that r!level is in a Beta stage(Some features may change or be reworked). The XP system was made with Enmap, https://www.npmjs.com/package/enmap enjoy!</li>
+				<li>Please be aware that rb!level is in a Beta stage(Some features may change or be reworked). The XP system was made with Enmap, https://www.npmjs.com/package/enmap enjoy!</li>
 			</ul>
 			For more information send me a DM or ask in #roast-bot-help.
 		</p>
@@ -121,7 +121,7 @@
 		<p>2018-08-10:
 			<ul>
 				<li>Roast Bot v1.8.0 is live! The new features of this release are:</li>
-				<li>r!say comamnd is here. Use r!say What you want the bot to say to use it!</li>
+				<li>rb!say comamnd is here. Use rb!say What you want the bot to say to use it!</li>
 				<li>There are now 108 roasts in Roast-Bot! Before v1.8.0 there were 56.</li>
 				<li>There are now more Memes added to Roast-Bot. 100 to 123.</li>
 				<li>XP-System has been removed :(. Dont worry its coming back. Due to so many bugs and XP and levels resetting every update. It will be back within the week.</li>
@@ -134,8 +134,8 @@
 		<p>2018-08-15:
 			<ul>
 				<li>Roast Bot v1.9.0 is here. Here's what's new:</li>
-				<li>r!urban whatToSearch is live! Search up anything on the urban dictionary with r!urban!</li>
-				<li>Each command will soon have a r!commandName help use where how to use the command will be shown.</li>
+				<li>rb!urban whatToSearch is live! Search up anything on the urban dictionary with rb!urban!</li>
+				<li>Each command will soon have a rb!commandName help use where how to use the command will be shown.</li>
 				<li>New XP-System coming within the next couple weeks! Stay tuned.</li>
 				<li>Roast-Bot source code is now much easier to maintain.New XP-System coming within the next couple weeks! Stay tuned.</li>
 			</ul>
@@ -147,7 +147,7 @@
 			<ul>
 				<li>Roast Bot v2.0.0 is here!! The new features are:</li>
 				<li>welcome-leave-log was removed due to very few people using it.</li>
-				<li>New XP system added that increases XP and levels only when you use r! commands.</li>
+				<li>New XP system added that increases XP and levels only when you use rb! commands.</li>
 				<li>More than 50 new memes!</li>
 				<li>multiple bug fixes.</li>
 			</ul>
@@ -157,8 +157,8 @@
 			<ul>
 				<li>Roast-Bot v2.1.0 is live, the new features are as follows:</li>
 				<li>30 new Memes added.</li>
-				<li>r!user added! To learn more use r!user help.</li>
-				<li>And the best for last..... Roast-Bot now has custom prefix setting enabled! To learn more/get started use r!prefix help.</li>
+				<li>rb!user added! To learn more use rb!user help.</li>
+				<li>And the best for last..... Roast-Bot now has custom prefix setting enabled! To learn more/get started use rb!prefix help.</li>
 			</ul>
 			For more information on this release send me a DM or ask in #roast-bot-help.
 		</p>
@@ -168,9 +168,9 @@
 			<ul>
 				<li>Roast-Bot v2.2.0 is now live, the new features/updates are as follows:</li>
 				<li>50 new Memes added!</li>
-				<li>r!feedback added, use r!feedback Feedback to send feedback. Note: you can also send reports of bugs with r!feedback.</li>
-				<li>On-Off is live! Use r!off commandName to turn commands off and r!on commamdName to turn a command back on. Note: only admins can turn commands on/off.</li>
-				<li>Custom prefix has been fixed, now the only way to change a prefix is by using r!prefix newPrefix no matter what your prefix is. Note: It has been changed so only admins can set the prefix.</li>
+				<li>rb!feedback added, use rb!feedback Feedback to send feedback. Note: you can also send reports of bugs with rb!feedback.</li>
+				<li>On-Off is live! Use rb!off commandName to turn commands off and rb!on commamdName to turn a command back on. Note: only admins can turn commands on/off.</li>
+				<li>Custom prefix has been fixed, now the only way to change a prefix is by using rb!prefix newPrefix no matter what your prefix is. Note: It has been changed so only admins can set the prefix.</li>
 				<li>For more information on v2.2.0 send me a DM or ask in #roast-bot-help.</li>
 			</ul>
 		</p>
