--- a/website/Leaderboard/index.html
+++ b/website/Leaderboard/index.html
@@ -39,7 +39,7 @@
 	<br>
 	<p id="main">
 		&nbsp;&nbsp;&nbsp;&nbsp;To see if your on the leaderboard go to the server that you use Roast-Bot commands in the most and
-		do <code>r!level</code>. Then compare your XP/Level to the ones in the table below!
+		do <code>rb!level</code>. Then compare your XP/Level to the ones in the table below!
 	</p>
 	<br>
 	<hr width="250px">
@@ -110,7 +110,7 @@
 	<br>
 	<hr width="250px">
 	<br><br>
-	<p style="text-align: center">Want to see yourself up here? Use any command that starts with <code>r!</code> on a server
+	<p style="text-align: center">Want to see yourself up here? Use any command that starts with <code>rb!</code> on a server
 		that has Roast-Bot in it. Get high enough level/XP to surpass anyone on this list and you'll be added!</p>
 	<footer>
 		<div id="footer">
